@@ -43,6 +43,8 @@
 	* libfreeipmi/: Audit, remove unnecessary memsets, add +1 to
 	string buffers, misc fixes.
 
+	* Fix logic and corner cases with parse_kg.
+
 2016-10-03 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/fru/ipmi-fru-data.c: Remove unnecessary memsets. 
